图片 / 颜色 / 表格

--- a/5days/case/01.菜单.html
+++ b/5days/case/01.菜单.html
@@ -26,7 +26,7 @@
 				line-height: 40px;
 				/* 去掉点 */
 				list-style:none;
-				/* 让他在以行的方式显示 */
+				/* 让他以行的方式显示 */
 				display: inline-block;
 				/*内容居中*/
 				text-align: center;
